# c_scratchpad_old

./: HelloServer.c  README.md  RingBuffer.c  RingBuffer.h  art_of_debugging.c  atof.c  atof_main.c  bit_manipulation.h  c_file_read.c  c_file_read.h  cat.c  close.c  cmd_arg_csv.c  dec_to_bin.c  dec_to_bin.h  dec_to_bin_main.c  fill_files.c  fill_files.h  fill_files_main.c  httpd.c  ins.c  ins_old.c  io_getdelim.c  io_kit_test.c  json.js  json.l  json.y  malloc.c  pcap_sn.c  print_binary.c  read_write.c  simpl_line_by_line.c  simple_file_to_file.c  simple_file_to_file_old.c  simple_search_replace.c  simple_server_main.c  simpleclient.c  sn.c  test_asm.c  test_fptrs.c  (+2 more)
beejs_ipc/: CMakeLists.txt  basic_pipe.c  clear_flock.c  create_msg_queue.c  destroy_queue.c  echoc.c  echos.c  fork_and_pipe.c  fork_primer.c  get_semaphore.c  kirk.c  lockdemo.c  ls_pipe.c  mmap_page_size.c  mmapdemo.c  rcv_from_queue.c  semdemo.c  semrm.c  send_to_queue.c  set_flock.c  shmdemo.c  sigusr1_handler.c  spair.c  speak.c  spock.c  tick.c
beejs_network/: CMakeLists.txt  accept_ex.c  addrinfo_ex.c  bind_ex.c  broadcaster.c  client.c  close_ex.c  connect_ex.c  errno_ex.c  fcntl_ex.c  gethostbyaddr_ex.c  gethostbyname_ex.c  gethostname_ex.c  getnameinfo_ex.c  getpeername_ex.c  hto_nto_ex.c  inet_ex.c  inet_ntop.c  listen_ex.c  listener.c  pack754.c  pack_floats.c  packi.c  perror_ex.c  poll_ex.c  recv_ex.c  recvfrom_ex.c  select.c  select_ex.c  selectserver.c  send_ex.c  sendall.c  server.c  setsockopt_ex.c  showip.c  shutdown_ex.c  sockaddr_ex.c  socket_ex.c  talker.c
c_programming_language/: CMakeLists.txt
c_programming_language/ch_1/: 1_10_main.c  1_11_main.c  1_12_main.c  1_13_2_main.c  1_13_main.c  1_14_main.c  1_15_main.c  1_16_main.c  1_17_main.c  1_18_main.c  1_19_main.c  1_1_main.c  1_20_main.c  1_21_main.c  1_22_main.c  1_23_main.c  1_24_main.c  1_2_1_main.c  1_2_main.c  1_3_main.c  1_4_main.c  1_5_1_main.c  1_5_3_main.c  1_5_4_main.c  1_5_main.c  1_6_main.c  1_7_main.c  1_8_main.c  1_9_main.c  CMakeLists.txt
c_programming_language/ch_2/: 2_2_main.c  2_3_main.c  2_5_main.c  2_6_main.c  2_7_main.c  2_9_main.c  CMakeLists.txt
c_programming_language/ch_3/: 3_1_main.c  3_2_main.c  3_3_main.c  3_6_main.c  CMakeLists.txt
c_programming_language/ch_4/: 4_10_main.c  4_11_main.c  4_12_main.c  4_13_main.c  4_1_2_main.c  4_1_main.c  4_2_2_main.c  4_2_main.c  4_3_2_main.c  4_3_main.c  4_4_main.c  4_5_main.c  4_6_main.c  4_7_main.c  4_8_main.c  CMakeLists.txt
c_programming_language/ch_5/: 5_10_main.c  5_11_main.c  5_12_main.c  5_13_main.c  5_14_main.c  5_15_main.c  5_16_main.c  5_17_main.c  5_18_main.c  5_19_main.c  5_1_main.c  5_20_main.c  5_2_main.c  5_3_main.c  5_4_main.c  5_5_main.c  5_6_2_main.c  5_6_main.c  5_7_main.c  5_9_main.c  CMakeLists.txt
c_programming_language/ch_6/: 6_1_main.c  6_2_main.c  CMakeLists.txt
c_programming_language/ch_7/: 7_1_main.c  7_2_main.c  7_3_main.c  7_4_main.c  7_5_main.c  7_6_main.c  7_7_main.c  7_8_main.c  7_9_main.c  CMakeLists.txt
c_programming_language/ch_8/: 8_1_main.c  8_2_2_main.c  8_2_3_main.c  8_3_2_main.c  8_3_main.c  8_4_main.c  8_5_main.c  8_6_main.c  8_7_main.c  8_8_main.c  CMakeLists.txt  make_files.sh
c_programming_language/knr/: CMakeLists.txt
c_programming_language/knr/ch_1/: 1_10_main.c  1_12_main.c  1_13_2_main.c  1_13_main.c  1_14_main.c  1_15_main.c  1_16_main.c  1_17_main.c  1_18_main.c  1_19_main.c  1_20_main.c  1_21_main.c  1_22_main.c  1_23_main.c  1_24_main.c  1_2_1_main.c  1_2_main.c  1_3_main.c  1_4_main.c  1_5_2_main.c  1_5_main.c  1_6_main.c  1_7_main.c  1_8_main.c  1_9_main.c  CMakeLists.txt
c_programming_language/knr/ch_2/: 2_10_main.c  2_1_main.c  2_4_main.c  2_5_main.c  2_8_main.c  CMakeLists.txt
c_programming_language/knr/ch_3/: 3_3_main.c  3_4_main.c  3_5_main.c  CMakeLists.txt
c_programming_language/knr/ch_4/: 4_10_main.c  4_14_main.c  4_2_main.c  4_3_2_main.c  4_3_main.c  4_4_main.c  4_5_main.c  4_9_main.c  CMakeLists.txt
c_programming_language/knr/ch_5/: 5_10_main.c  5_11_main.c  5_12_main.c  5_13_main.c  5_14_main.c  5_15_main.c  5_16_main.c  5_17_main.c  5_18_main.c  5_19_main.c  5_1_main.c  5_20_main.c  5_2_main.c  5_3_main.c  5_4_main.c  5_5_main.c  5_6_2_main.c  5_6_main.c  5_7_main.c  5_8_main.c  5_9_main.c  CMakeLists.txt
c_programming_language/knr/ch_6/: 6_1_main.c  6_2_main.c  CMakeLists.txt
c_programming_language/knr/ch_7/: 7_1_main.c  7_2_main.c  7_3_main.c  7_4_main.c  7_5_main.c  7_6_main.c  7_7_main.c  7_8_main.c  CMakeLists.txt
c_programming_language/knr/ch_8/: 8_1_main.c  8_2_2_main.c  8_2_3_main.c  8_2_main.c  8_3_2_main.c  8_3_main.c  8_4_main.c  8_5_main.c  8_6_main.c  8_7_main.c  8_8_main.c  CMakeLists.txt
cmake_build/: CMakeLists.txt  Makefile
flex_bison_test/: CMakeLists.txt  fb1-1.l  fb1-2.l  fb1-3.l  fb1-5.l  fb1-5.tab.c  fb1-5.y
misc_apue/: CMakeLists copy.txt  CMakeLists.txt  Makefile  basic_file_read_write.c  file_realpath.c  main.c  print_cmd_line_args.c  print_limits_constants.c  read_dir_entries_ls.c  systype.sh
misc_apue/ch_3/: 3_1.c  3_1.h  3_10.c  3_10.h  3_10_main.c  3_11.c  3_11.h  3_11_main.c  3_1_main.c  3_2.c  3_2.h  3_2_main.c  3_4.c  3_4.h  3_4_main.c  CMakeLists.txt
misc_apue/ch_4/: 4_12.c  4_16.c  4_21.c  4_22.c  4_23.c  4_24.c  4_25.c  4_3.c  4_3.h  4_3_main.c  4_8.c  4_9.c  CMakeLists.txt
misc_apue/lib/: CMakeLists.txt  Orecvfd.c  bufargs.c  cliconn.c  clrfl.c  daemonize.c  error.c  errorlog.c  lockreg.c  locktest.c  nspipe.c  openmax.c  pathalloc.c  popen.c  prexit.c  prmask.c  ptyfork.c  ptyopen.c  readn.c  recvfd.c  semaph.c  senderr.c  sendfd.c  servaccept.c  servlisten.c  setfd.c  setfl.c  signal.c  signalintr.c  sleep.c  sleepus.c  spipe.c  strerror.c  tellwait.c  ttymodes.c  writen.c
nfa/: CMakeLists.txt  digraph.h  list.c  list.h  main.c  nfa.c  nfa.h
pointers/: 1.c  2.c  3.c  4.c  5.c  CMakeLists copy.txt  CMakeLists.txt  basic_arrays.c  ch1.c  ch2.c  ch3.c  ch4.c  double_free.c  free_on_null.c  gc.c  link.c  link.h  pointer_addition.cpp  reference_to_pointer.cpp  return_reference.cpp  str_loc.c  test.c  test.pre.c
(+37 files in other folders)
