cmake_minimum_required(VERSION 3.6)
project(beejs_ipc)

set(CMAKE_C_STANDARD 11)

add_executable(basic_pipe basic_pipe.c)
add_executable(clear_flock clear_flock.c)
add_executable(create_msg_queue create_msg_queue.c)
add_executable(destroy_queue destroy_queue.c)
add_executable(echoc echoc.c)
add_executable(echos echos.c)
add_executable(fork_and_pipe fork_and_pipe.c)
add_executable(fork_primer fork_primer.c)
add_executable(get_semaphore get_semaphore.c)
add_executable(kirk kirk.c)
add_executable(lockdemo lockdemo.c)
add_executable(ls_pipe ls_pipe.c)
add_executable(mmap_page_size mmap_page_size.c)
add_executable(mmapdemo mmapdemo.c)
add_executable(rcv_from_queue rcv_from_queue.c)
add_executable(semdemo semdemo.c)
add_executable(semrm semrm.c)
add_executable(send_to_queue send_to_queue.c)
add_executable(set_flock set_flock.c)
add_executable(shmdemo shmdemo.c)
add_executable(sigusr1_handler sigusr1_handler.c)
add_executable(spair spair.c)
add_executable(speak speak.c)
add_executable(spock spock.c)
add_executable(tick tick.c)