cmake_minimum_required(VERSION 3.6)
project(beejs_network)

set(CMAKE_C_STANDARD 11)

add_executable(accept_ex accept_ex.c)
add_executable(addrinfo_ex addrinfo_ex.c)
add_executable(bind_ex bind_ex.c)
add_executable(broadcaster broadcaster.c)
add_executable(client client.c)
add_executable(close_ex close_ex.c)
add_executable(connect_ex connect_ex.c)
add_executable(errno_ex errno_ex.c)
add_executable(fcntl_ex fcntl_ex.c)
add_executable(gethostbyaddr_ex gethostbyaddr_ex.c)
add_executable(gethostbyname_ex gethostbyname_ex.c)
add_executable(gethostname_ex gethostname_ex.c)
add_executable(getnameinfo_ex getnameinfo_ex.c)
add_executable(getpeername_ex getpeername_ex.c)
add_executable(hto_nto_ex hto_nto_ex.c)
add_executable(inet_ex inet_ex.c)
add_executable(inet_ntop inet_ntop.c)
add_executable(listen_ex listen_ex.c)
add_executable(listener listener.c)
add_executable(pack754 pack754.c)
add_executable(pack_floats pack_floats.c)
add_executable(packi packi.c)
add_executable(perror_ex perror_ex.c)
add_executable(poll_ex poll_ex.c)
add_executable(recv_ex recv_ex.c)
add_executable(recvfrom_ex recvfrom_ex.c)
add_executable(select select.c)
add_executable(select_ex select_ex.c)
add_executable(selectserver selectserver.c)
add_executable(send_ex send_ex.c)
add_executable(sendall sendall.c)
add_executable(server server.c)
add_executable(setsockopt_ex setsockopt_ex.c)
add_executable(showip showip.c)
add_executable(shutdown_ex shutdown_ex.c)
add_executable(sockaddr_ex sockaddr_ex.c)
add_executable(socket_ex socket_ex.c)
add_executable(talker talker.c)
