cmake_minimum_required(VERSION 3.3)
project(c_programming_language)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

add_subdirectory(ch_1)
add_subdirectory(ch_2)
add_subdirectory(ch_3)
add_subdirectory(ch_4)
add_subdirectory(ch_5)
add_subdirectory(ch_6)
add_subdirectory(ch_7)
add_subdirectory(ch_8)