cmake_minimum_required(VERSION 3.3)
project(ch_1)

add_executable(1_1 1_1_main.c)
add_executable(1_2 1_2_main.c)
add_executable(1_2_1 1_2_1_main.c)
add_executable(1_3 1_3_main.c)
add_executable(1_4 1_4_main.c)
add_executable(1_5 1_5_main.c)
add_executable(1_5_1 1_5_1_main.c)
add_executable(1_5_2 1_5_2_main.c)
add_executable(1_5_3 1_5_3_main.c)
add_executable(1_5_4 1_5_4_main.c)
add_executable(1_6 1_6_main.c)
add_executable(1_7 1_7_main.c)
add_executable(1_8 1_8_main.c)
add_executable(1_9 1_9_main.c)
add_executable(1_10 1_10_main.c)
add_executable(1_11 1_11_main.c)
add_executable(1_12 1_12_main.c)
add_executable(1_13 1_13_main.c)
add_executable(1_13_2 1_13_2_main.c)
add_executable(1_14 1_14_main.c)
add_executable(1_15 1_15_main.c)
add_executable(1_16 1_16_main.c)
add_executable(1_17 1_17_main.c)
add_executable(1_18 1_18_main.c)
add_executable(1_19 1_19_main.c)
add_executable(1_20 1_20_main.c)
add_executable(1_21 1_21_main.c)
add_executable(1_22 1_22_main.c)
add_executable(1_23 1_23_main.c)
add_executable(1_24 1_24_main.c)