cmake_minimum_required(VERSION 3.3)
project(ch_4)

add_executable(4_1 4_1_main.c)
add_executable(4_1_2 4_1_2_main.c)
add_executable(4_2 4_2_main.c)
add_executable(4_2_2 4_2_2_main.c)
add_executable(4_3 4_3_main.c)
add_executable(4_3_2 4_3_2_main.c)
add_executable(4_4 4_4_main.c)
add_executable(4_5 4_5_main.c)
add_executable(4_6 4_6_main.c)
add_executable(4_7 4_7_main.c)
add_executable(4_8 4_8_main.c)
add_executable(4_9 4_9_main.c)
add_executable(4_10 4_10_main.c)
add_executable(4_11 4_11_main.c)
add_executable(4_12 4_12_main.c)
add_executable(4_13 4_13_main.c)
add_executable(4_14 4_14_main.c)