cmake_minimum_required(VERSION 3.3)
project(ch_1)

add_executable(8_1 8_1_main.c)
add_executable(8_2 8_2_main.c)
add_executable(8_2_2 8_2_2_main.c)
add_executable(8_2_3 8_2_3_main.c)
add_executable(8_3 8_3_main.c)
add_executable(8_3_2 8_3_2_main.c)
add_executable(8_4 8_4_main.c)
add_executable(8_5 8_5_main.c)
add_executable(8_6 8_6_main.c)
add_executable(8_7 8_7_main.c)
add_executable(8_8 8_8_main.c)