project(ch_5)

add_executable(5_1 5_1_main.c)
add_executable(5_2 5_2_main.c)
add_executable(5_3 5_3_main.c)
add_executable(5_4 5_4_main.c)
add_executable(5_5 5_5_main.c)
add_executable(5_6 5_6_main.c)
add_executable(5_6_2 5_6_2_main.c)
add_executable(5_7 5_7_main.c)
add_executable(5_8 5_8_main.c)
add_executable(5_9 5_9_main.c)
add_executable(5_10 5_10_main.c)
add_executable(5_11 5_11_main.c)
add_executable(5_12 5_12_main.c)
add_executable(5_13 5_13_main.c)
add_executable(5_14 5_14_main.c)
add_executable(5_15 5_15_main.c)
add_executable(5_16 5_16_main.c)
add_executable(5_17 5_17_main.c)
add_executable(5_18 5_18_main.c)
add_executable(5_19 5_19_main.c)
add_executable(5_20 5_20_main.c)